# Copyright 2023 The ModelarData Utilities Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_evaluator"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[[bin]]
name = "modelardbe"
path = "src/main.rs"

[dependencies]
arrow = "42.0.0"
arrow-flight = "42.0.0"
bytes = "1.4.0"
futures = "0.3.28"
parquet = "42.0.0"
tempfile = "3.6.0"
tokio = "1.29.1"
tonic = "0.9.2"
